--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Home</title>
   <link rel="stylesheet" href="/mypiano/assets/css/style.css">
 </head>
 <body>
   <header>
-  <h1>
-    <a href="/mypiano/" style="color: #ffcc66; text-decoration: none;">My Piano</a>
-  </h1>
-  
-</header>
+    <h1>
+      <a href="/mypiano/" class="site-title">My Piano</a>
+    </h1>
+    
+  </header>
 
   <main class="container">
     <div class="search-container">
@@ -82,8 +83,9 @@ sectionLinks.forEach(link => {
   </main>
 
   <footer>
-    &copy; 2025 My Piano. All rights reserved.
+    <p>&copy; 2025 My Piano. All rights reserved.</p>
   </footer>
-<script src="/mypiano/assets/js/search.js"></script>
+
+  <script src="/mypiano/assets/js/search.js"></script>
 </body>
 </html>
